# ModernGameEngine

./: CMakeLists.txt  main
dep/: CMakeLists.txt
dep/glew/: CMakeLists.txt
dep/glm/: CMakeLists.txt
include/Camera/: Camera.hpp  Object.hpp
include/IO/: IO.hpp
include/Pool/: Pool.hpp  TaskWorker.hpp  ThreadPool.hpp
include/Scheduler/: Scheduler.hpp  Timer.hpp  Updater.hpp
include/Server/: Timer.hpp
include/Shader/: Program.hpp  Texture.hpp
include/Utils/: Resources.hpp  core.hpp
include/Utils/private/: core_msvc.h
include/Window/: Broadcast.hpp  Window.hpp
lib/Debug/: AntTweakBar.exp  AntTweakBar.lib
resources/shaders/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt
src/Camera/: Camera.cpp  Object.cpp
src/Game/: Container.cpp  Container.hpp  Cube.cpp  Cube.hpp  Game.cpp  Game.h  Game.hpp  Object.cpp  Object.hpp
src/IO/: IO.cpp
src/OGLWrappers/: Program.cpp  Program.hpp
src/Pool/: PermaWorker.cpp  PermaWorker.h  PermaWorker.hpp  Pool.cpp  Pool.h  TaskWorker.cpp  TaskWorker.h  TaskWrapper.cpp  TaskWrapper.h  TaskWrapper.hpp  ThreadPool.cpp  ThreadPool.h  ThreadPool.hpp  WorkerThread.cpp  WorkerThread.h  WorkerThread.hpp
src/Scheduler/: Scheduler.cpp  Timer.cpp  Updater.cpp
src/Server/: Scheduler.cpp  Scheduler.h  Scheduler.hpp  Timer.cpp  Timer.h  Timer.hpp  Updater.cpp  Updater.h  Updater.hpp  main.cpp
src/Shader/: Program.cpp  Program.hpp  Texture.cpp
src/Utils/: Resources.cpp  Resources.hpp  concurrentqueue.h  core.h  core.hpp  counter.h  counter.hpp  log.hpp  platform_detect.hpp  pool.cpp  pool.h
src/Utils/private/: core_gcc.h  core_msvc.h  stdint.h
src/Window/: Broadcast.cpp  Broadcast.h  Broadcast.hpp  Window.cpp  Window.h  Window.hpp
